compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/PropertyWithoutName.java
public abstract interface Foo /* test.Foo*/ {
  @org.jetbrains.annotations.NotNull()
  public abstract java.lang.String getFoo();//  getFoo()
}
